Bug 65154 - [IVB/HSW bisected]Lightsmark v2008 performance reduced by ~8%
Summary: [IVB/HSW bisected]Lightsmark v2008 performance reduced by ~8%
Status: VERIFIED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: high major
Assignee: Eric Anholt
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-30 02:46 UTC by meng
Modified: 2013-06-04 00:38 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description meng 2013-05-30 02:46:17 UTC
System Environment:       
----------------------------------------------
Platform:  HSW/IVB
Mesa:    (master)4dea6cf21557bcd3bbab3402e19e19f665d7e177
Kernel:	 (drm-intel-nightly) 0888e7a120fbc70af0867041abccc72c753ed810

Bug detailed description:
----------------------------------------------
 Lightsmark v2008 performace reduced by ~8% on HSW/IVB. The problem exists on X raw and gnome-session. It’s Mesa regression, bisecting show the first bad commit is that:

commit e845c5cf7abce55759501a473459aff3bf25c9ca
Author: Eric Anholt <eric@anholt.net>
Date:   Thu May 23 16:58:58 2013 -0700

    intel: Make a temporary miptree for the blit path of miptree mapping.

Performance detail 
HSW: X raw.1920x11080
----------------------------------------------
Mesa 9.2.0 (git-4a13bee): 77.72
Mesa 9.2.0 (git-e845c5c): 71.32

Reproduce steps:
---------------------------------------------
1. xinit&
2. vblank_mode=0 ./backend silent 1920x1080
Comment 1 meng 2013-05-30 07:28:51 UTC
The Mesa patch also caused Open Arena v0.8.8 reduced by 12% ±8%  on IVB (not on HSW).
Performance detail
IVB, gnome-session with compositing:1920x1080 and SNA
----------------------------------------------
Mesa 9.2.0 (git-4a13bee) average result:  36.6 (36.4,36.7,36.7)
Mesa 9.2.0 (git-e845c5c) average result:  31.97( 34.5,30.7,30.7)
Comment 2 Gordon Jin 2013-06-03 14:03:44 UTC
Eric, can you reproduce this?
Comment 3 Eric Anholt 2013-06-03 21:31:02 UTC
A patch was already on mesa-dev undergoing review last thursday.  I do want to say thanks for the quick report of the performance regression (within 2 days after it landed), and the improved turnaround here really helped get it fixed quickly.  Nagging on bugs for developers to reproduce them is a major demotivator, though.

commit f96de8ad9622d42ce54feedd246967c73d1206cd
Author: Eric Anholt <eric@anholt.net>
Date:   Thu May 30 09:43:45 2013 -0700

    intel: Fix performance regression from miptree blit changes.
Comment 4 meng 2013-06-04 00:38:51 UTC
Verified it with Mesa 9.2.0 (git-f96de8a).


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.